// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeForm component renders correctly for a Tech Stack 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="FormContainer-sc-8s9ya3-0 fDwXTj"
      >
        <div
          class="FormTitle-oi1tko-0 AttributeFormTitle-sc-1ev8f59-0 guzjNX"
        >
          Add New 
          Tech Stack
        </div>
        <div>
          <div
            class="FormLabel-wqrwj6-0 bOWOhD"
          />
          <input
            class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
            maxlength="40"
            name=""
            placeholder="Tech Stack Name"
            type=""
            value=""
          />
        </div>
        <div>
          <div
            class="FormLabel-wqrwj6-0 bOWOhD"
          />
          <input
            class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
            maxlength="40"
            name=""
            placeholder="Tech Stack Image URL"
            type=""
            value=""
          />
        </div>
        <div>
          <button
            class="SubmitButton__Button-sc-12s6sqe-0 bZVpPP"
            type="submit"
          >
            Create New Tech Stack
          </button>
        </div>
      </div>
    </div>
    <div
      class="react-toast-notifications__container css-mrh2d-ToastContainer"
    />
  </body>,
  "container": <div>
    <div
      class="FormContainer-sc-8s9ya3-0 fDwXTj"
    >
      <div
        class="FormTitle-oi1tko-0 AttributeFormTitle-sc-1ev8f59-0 guzjNX"
      >
        Add New 
        Tech Stack
      </div>
      <div>
        <div
          class="FormLabel-wqrwj6-0 bOWOhD"
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
          maxlength="40"
          name=""
          placeholder="Tech Stack Name"
          type=""
          value=""
        />
      </div>
      <div>
        <div
          class="FormLabel-wqrwj6-0 bOWOhD"
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
          maxlength="40"
          name=""
          placeholder="Tech Stack Image URL"
          type=""
          value=""
        />
      </div>
      <div>
        <button
          class="SubmitButton__Button-sc-12s6sqe-0 bZVpPP"
          type="submit"
        >
          Create New Tech Stack
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AttributeForm component renders correctly for a client 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="FormContainer-sc-8s9ya3-0 fDwXTj"
      >
        <div
          class="FormTitle-oi1tko-0 AttributeFormTitle-sc-1ev8f59-0 guzjNX"
        >
          Add New 
          Client
        </div>
        <div>
          <div
            class="FormLabel-wqrwj6-0 bOWOhD"
          />
          <input
            class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
            maxlength="40"
            name=""
            placeholder="Client Name"
            type=""
            value=""
          />
        </div>
        <div>
          <div
            class="FormLabel-wqrwj6-0 bOWOhD"
          />
          <input
            class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
            maxlength="40"
            name=""
            placeholder="Client Image URL"
            type=""
            value=""
          />
        </div>
        <div>
          <button
            class="SubmitButton__Button-sc-12s6sqe-0 bZVpPP"
            type="submit"
          >
            Create New Client
          </button>
        </div>
      </div>
    </div>
    <div
      class="react-toast-notifications__container css-mrh2d-ToastContainer"
    />
  </body>,
  "container": <div>
    <div
      class="FormContainer-sc-8s9ya3-0 fDwXTj"
    >
      <div
        class="FormTitle-oi1tko-0 AttributeFormTitle-sc-1ev8f59-0 guzjNX"
      >
        Add New 
        Client
      </div>
      <div>
        <div
          class="FormLabel-wqrwj6-0 bOWOhD"
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
          maxlength="40"
          name=""
          placeholder="Client Name"
          type=""
          value=""
        />
      </div>
      <div>
        <div
          class="FormLabel-wqrwj6-0 bOWOhD"
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
          maxlength="40"
          name=""
          placeholder="Client Image URL"
          type=""
          value=""
        />
      </div>
      <div>
        <button
          class="SubmitButton__Button-sc-12s6sqe-0 bZVpPP"
          type="submit"
        >
          Create New Client
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AttributeForm component renders correctly for an ANDi 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="FormContainer-sc-8s9ya3-0 fDwXTj"
      >
        <div
          class="FormTitle-oi1tko-0 AttributeFormTitle-sc-1ev8f59-0 guzjNX"
        >
          Add New 
          ANDi
        </div>
        <div>
          <div
            class="FormLabel-wqrwj6-0 bOWOhD"
          />
          <input
            class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
            maxlength="40"
            name=""
            placeholder="ANDi Name"
            type=""
            value=""
          />
        </div>
        <div>
          <div
            class="FormLabel-wqrwj6-0 bOWOhD"
          />
          <input
            class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
            maxlength="40"
            name=""
            placeholder="ANDi Image URL"
            type=""
            value=""
          />
        </div>
        <div>
          <button
            class="SubmitButton__Button-sc-12s6sqe-0 bZVpPP"
            type="submit"
          >
            Create New ANDi
          </button>
        </div>
      </div>
    </div>
    <div
      class="react-toast-notifications__container css-mrh2d-ToastContainer"
    />
  </body>,
  "container": <div>
    <div
      class="FormContainer-sc-8s9ya3-0 fDwXTj"
    >
      <div
        class="FormTitle-oi1tko-0 AttributeFormTitle-sc-1ev8f59-0 guzjNX"
      >
        Add New 
        ANDi
      </div>
      <div>
        <div
          class="FormLabel-wqrwj6-0 bOWOhD"
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
          maxlength="40"
          name=""
          placeholder="ANDi Name"
          type=""
          value=""
        />
      </div>
      <div>
        <div
          class="FormLabel-wqrwj6-0 bOWOhD"
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 jdgKUs"
          maxlength="40"
          name=""
          placeholder="ANDi Image URL"
          type=""
          value=""
        />
      </div>
      <div>
        <button
          class="SubmitButton__Button-sc-12s6sqe-0 bZVpPP"
          type="submit"
        >
          Create New ANDi
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
